<resources>
    <string name="app_name">Movie Catalogue</string>

    <string name="release_on">Release on %s</string>
    <string name="start_on">Start on %s</string>
    <string name="start_on_detail">Start on\n%s</string>
    <string name="overview">Overview</string>
    <string name="release_on_detail">Release on\n%s</string>
    <string name="share_text">Watch %s now</string>
    <plurals name="episodes">
        <item quantity="one">%d episode</item>
        <item quantity="other">%d episodes</item>
    </plurals>
    <plurals name="seasons">
        <item quantity="one">%d season</item>
        <item quantity="other">%d seasons</item>
    </plurals>
    <string name="tv_show">TV Show</string>
    <string name="movie">Movie</string>
    <string name="favorite">Favorite</string>
    <string name="error_message">Oops, there is error!</string>
    <string name="menu_favorite">Favorite</string>
</resources>